--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 border-bottom  shadow  mb-1 bg-body rounded""  >
             <div class="container-fluid">
               <a class="navbar-brand " href="#">
-                <img src="./Images/Logo/logo.png" style="padding-top: 0%; margin-top: 0px;"> SVM Pharma</a>
+                <img src="./Images/svm logo PNG (1).png" style="padding-top: 0%; margin-top: 0px;"> SVM Pharma</a>
     
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
